# ACME_Cert_Life_Cycle_Agent_By_Claude_Cowork

./: .dockerignore  .env.example  .env.pebble  .gitignore  .history  .mcp.json  ACME_Agent_Plan.md  CLAUDE.md  Dockerfile  README.md  TEST_RESULTS.md  TEST_SUMMARY.md  code_graph.sqlite  config.py  docker-compose.pebble.yml  docker-compose.yml  logger.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
acme/: __init__.py  ca_detection.py  client.py  crypto.py  dns_challenge.py  http_challenge.py  jws.py
agent/: .tmp  __init__.py  graph.py  prompts.py  revocation_graph.py  state.py
doc/: ACME_AGENT_PLAN.md  ACME_Agent_Plan.md  ASYNC_SCHEDULER_IMPLEMENTATION_PLAN.md  BACKOFF_INTEGRATION_ANALYSIS.md  CA_PROVIDERS.md  CERTIFICATE_STORAGE.md  CHECKPOINT_TESTS.md  CI_TEST_COVERAGE.md  CONFIGURATION.md  DEPENDENCIES.md  DESIGN_ASYNC_SCHEDULER_PLAN.md  DESIGN_BACKOFF_INTEGRATION_ANALYSIS.md  DESIGN_NONCE_MANAGEMENT_STRATEGY.md  DESIGN_PRINCIPLES.md  DESIGN_PROTOCOL_PATTERN.md  DESIGN_RENEWAL_PLANNER_LLM_RATIONALE.md  DESIGN_STATEFUL_CLIENT_ANALYSIS.md  DNS_01_IMPLEMENTATION_PLAN.md  DOCKER.md  DOCKER_NONROOT.md  DOCKER_TEST_FLOW.md  FEATURE_MATRIX.md  HOW_IT_WORKS.md  HTTP_01_VALIDATION_EXPLAINED.md  HTTP_CHALLENGE_CONFIGURATION.md  HTTP_CHALLENGE_MODES.md  LETS_ENCRYPT.md  LINKEDIN_POST.md  LLM_NODES.md  LOGGER_IMPLEMENTATION_PLAN.md  MCP_IMPLEMENTATION_DETAILS.md  MCP_SERVER.md  MCP_TOOL_SERIALIZATION.md  NODE_IMPLEMENTATION_ANALYSIS.md  NONCE_MANAGEMENT_STRATEGY.md  OBSERVABILITY.md  PEBBLE_TESTING_SERVER.md  PLANNER_VALIDATION_TESTS.md  PLAN_LLM_OPTIONAL_MODE.md  PREREQUISITES.md  (+40 more)
kb/: .gitignore  build_index.py  query.py  requirements.txt
llm/: factory.py
memory/: acme_agent_graph.md  acme_dns_challenge.md  acme_jws_gotcha.md  acme_llm_optional.md  acme_mcp_server.md  acme_project_overview.md  acme_revocation.md  acme_storage_pattern.md  acme_team_memory_poc.md  acme_test_pebble.md
prompts_for_development/: add_unit_test.md  bug_triage_fix.md  code_change.md  design_options.md  explain_symbol.md  perf_check.md  refactor.md
scripts/: build_code_embeddings.py  generate_test_cert.py  mcp_smoke_test.py
server/: main.py  session.py
storage/: __init__.py  atomic.py  filesystem.py
tests/: __init__.py  conftest.py  test_atomic_writes.py  test_ca_detection.py  test_checkpoint.py  test_cli_overrides.py  test_config_llm_disabled.py  test_csr_node.py  test_dns_challenge.py  test_dns_provider_registry.py  test_docker_config.py  test_error_handler.py  test_error_handler_deterministic.py  test_finalizer_guards.py  test_http_challenge.py  test_integration_pebble.py  test_jws_validate_eab_hmac_key.py  test_kb.py  test_lifecycle_pebble.py  test_llm_factory.py  test_logger_singleton.py  test_mcp_server_dispatch.py  test_mcp_server_locking.py  test_mcp_server_security.py  test_node_base.py  test_node_parity.py  test_planner_deterministic.py  test_planner_validation.py  test_reporter_deterministic.py  test_rest_server.py  test_retry_scheduler.py  test_revocation.py  test_revocation_pebble.py  test_revocation_reporter_deterministic.py  test_router.py  test_storage_manager.py  (+2 more)
(+30 files in other folders)
