[project]
name = "acme-certificate-lifecycle-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dns-cloudflare = ["cloudflare>=3.0"]
dns-route53    = ["boto3>=1.34"]
dns-google     = ["google-cloud-dns>=0.34"]
dns-all        = ["cloudflare>=3.0", "boto3>=1.34", "google-cloud-dns>=0.34"]

[dependency-groups]
dev = [
    "faiss-cpu>=1.13.2",
    "sentence-transformers>=5.2.3",
]
