[project]
name = "acme-certificate-lifecycle-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dns-cloudflare = ["cloudflare>=3.0"]
dns-route53    = ["boto3>=1.34"]
dns-google     = ["google-cloud-dns>=0.34"]
dns-all        = ["cloudflare>=3.0", "boto3>=1.34", "google-cloud-dns>=0.34"]

[dependency-groups]
dev = [
    "anthropic>=0.82",
    "cryptography>=44.0",
    "faiss-cpu>=1.13",
    "josepy>=1.14",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=1.2",
    "langchain-ollama>=1.0",
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.1",
    "langsmith>=0.3",
    "pydantic-settings>=2.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "responses>=0.25",
    "sentence-transformers>=5.2",
]
