[project]
name = "acme-certificate-lifecycle-agent"
version = "0.1.0"
description = "LangGraph state machine + Claude agent for automated TLS certificate renewal via ACME RFC 8555"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0",
    "josepy>=1.14",
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.1",
    "pydantic-settings>=2.8",
    "schedule>=1.2",
    "structlog>=25.1",
]

[project.optional-dependencies]
# LLM provider extras — install one to enable LLM features (LLM_DISABLED=false)
llm-anthropic = ["langchain>=0.3", "langchain-core>=1.2", "langchain-anthropic>=0.3", "anthropic>=0.82"]
llm-openai    = ["langchain>=0.3", "langchain-core>=1.2", "openai>=1.0"]
llm-ollama    = ["langchain>=0.3", "langchain-core>=1.2", "langchain-ollama>=1.0"]
llm-all       = ["langchain>=0.3", "langchain-core>=1.2", "langchain-anthropic>=0.3", "langchain-ollama>=1.0", "anthropic>=0.82"]

# DNS-01 challenge provider extras
dns-cloudflare = ["cloudflare>=3.0"]
dns-route53    = ["boto3>=1.34"]
dns-google     = ["google-cloud-dns>=0.34"]
dns-all        = ["cloudflare>=3.0", "boto3>=1.34", "google-cloud-dns>=0.34"]

[dependency-groups]
dev = [
    "acme-certificate-lifecycle-agent[llm-all,dns-all]",
    "coverage>=7.0",
    "langsmith>=0.3",
    "mcp>=1.26.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.8.0",
    "responses>=0.25",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require Pebble ACME server (run sequentially only)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
